tests/compile-fail/integration_suite__integration__mapfiles__intrinsic_name_typo.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: invalid intrinsic name: Matching variant not found
  ┌─ <mapfile>:3:3
  │
3 │ 4 CondimentJmp(>=,int)
  │   ^^^^^^^^^^^^^^^^^^^^ Matching variant not found


